--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/node": "^2.5.11",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "@vercel/node": "^2.5.11",
-    "node-telegram-bot-api": "^0.56.0",
+    "dayjs": "^1.11.6",
     "dotenv": "^16.0.0",
-    "node-fetch": "^2.6.2",
+    "express": "^4.18.1",
     "lodash": "^4.17.21",
-    "dayjs": "^1.11.6"
+    "node-fetch": "^2.6.2",
+    "node-telegram-bot-api": "^0.56.0",
+    "telegrambot": "^0.1.0"
   },
   "bin": "app.js",
   "pkg": {
